[AR-1] added security

--- a/agreement-registration-app/src/main/resources/application.yaml
+++ b/agreement-registration-app/src/main/resources/application.yaml
@@ -6,3 +6,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+
+security-user:
+  name: ${ADMIN_USERNAME:admin}
+  password: ${ADMIN_PASSWORD:admin}
