--- a/agreement-registration-app/src/main/resources/application.yaml
+++ b/agreement-registration-app/src/main/resources/application.yaml
@@ -6,6 +6,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+  freemarker:
+    template-loader-path: "classpath:/templates"
+    suffix: ".ftl"
 
 security-user:
   name: ${ADMIN_USERNAME:admin}
