--- a/agreement-registration-management/pom.xml
+++ b/agreement-registration-management/pom.xml
@@ -18,4 +18,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.eddev</groupId>
+            <artifactId>agreement-registration-api</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
