[AR-11] - added vue js

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@
 *.zip
 *.tar.gz
 *.rar
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -55,3 +60,18 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Vue js ###
+.DS_Store
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
