[AR-16] - added flyway migration, fixed file encoding issue

--- a/agreement-registration-app/src/main/resources/application.yaml
+++ b/agreement-registration-app/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
     password: ${PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
   freemarker:
     template-loader-path: "classpath:/templates"
     suffix: ".ftl"
