--- a/agreement-registration-management/pom.xml
+++ b/agreement-registration-management/pom.xml
@@ -23,6 +23,12 @@
             <groupId>com.eddev</groupId>
             <artifactId>agreement-registration-api</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.5</version>
+        </dependency>
     </dependencies>
 
 </project>
